--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,8 @@
 {
-    "trailingComma": "all",
+    "useTabs": false,
     "tabWidth": 2,
     "semi": true,
     "singleQuote": true,
     "bracketSpacing": true,
-    "printWidth": 100
+    "printWidth": 120
 }
